Modificaciones debido a la inclusión de carga de info QC hallazgos/defectos
Debido a la carga de hallazgos/defectos capc a través de un excell, esta
forma de captura tomará los datos cargados o bien como antes se
capturarán manualmente

--- a/TableroSLAs/PPMCsCrbCalidadCAPC.html
+++ b/TableroSLAs/PPMCsCrbCalidadCAPC.html
@@ -35,10 +35,10 @@
     <td>&nbsp; 
       <!-- BEGIN Record mc_info_rs_cr_calidad_capc -->
       <form id="mc_info_rs_cr_calidad_capc_capc" method="post" name="{HTMLFormName}" action="{Action}">
-        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
+        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
           <tr>
             <td valign="top">
-              <table class="Header" border="0" cellspacing="0" cellpadding="0">
+              <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Calificar calidad de productos terminados (CAPC)</strong>{lReportado}</td> 
@@ -130,14 +130,14 @@
  
                 <tr class="Controls">
                   <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcIndiceCalidadDoc">Indice calidad documental</label></td> 
-                  <td class="th"><input type="text" id="mc_info_rs_cr_calidad_capc_capcIndiceCalidadDoc" value="{IndiceCalidadDoc}" maxlength="3" size="3" name="{IndiceCalidadDoc_Name}"></td> 
+                  <td class="th"><input type="text" id="mc_info_rs_cr_calidad_capc_capcIndiceCalidadDoc" maxlength="3" size="3" value="{IndiceCalidadDoc}" name="{IndiceCalidadDoc_Name}"></td> 
                   <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcTotalDefectos"><label for="mc_info_rs_cr_calidad_capc_capcIndiceCalidadFun">&nbsp;</label></label></td> 
                   <td class="th"></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcDeductivaDoc">Deductiva documental</label></td> 
-                  <td class="th"><input type="text" id="mc_info_rs_cr_calidad_capc_capcDeductivaDoc" value="{DeductivaDoc}" maxlength="3" size="3" name="{DeductivaDoc_Name}"></td> 
+                  <td class="th"><input type="text" id="mc_info_rs_cr_calidad_capc_capcDeductivaDoc" maxlength="3" size="3" value="{DeductivaDoc}" name="{DeductivaDoc_Name}"></td> 
                   <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcTotalDefectos"><font style="BACKGROUND-COLOR: rgb(232,232,232)"><label for="mc_info_rs_cr_calidad_capc_capcDeductivaFun">&nbsp;</label></font></label></td> 
                   <td class="th"></td>
                 </tr>
@@ -161,11 +161,11 @@
  
                 <tr class="Bottom">
                   <td>
-                    <!-- BEGIN Button btnCalcula --><input type="submit" id="mc_info_rs_cr_calidad_capc_capcbtnCalcula" class="Button" value="Calcular y Agregar " alt="Calcular y Agregar" name="{Button_Name}" size="20"><!-- END Button btnCalcula -->
-                    <!-- BEGIN Button btnCalculaUpdate --><input type="submit" id="mc_info_rs_cr_calidad_capcbtnCalculaUpdate" class="Button" value="Recalcular y Actualizar" alt="Recalcular y Actualizar" name="{Button_Name}"><!-- END Button btnCalculaUpdate --></td> 
+                    <!-- BEGIN Button btnCalcula --><input type="submit" id="mc_info_rs_cr_calidad_capc_capcbtnCalcula" class="Button" alt="Calcular y Agregar" value="Calcular y Agregar " name="{Button_Name}" size="20"><!-- END Button btnCalcula -->
+                    <!-- BEGIN Button btnCalculaUpdate --><input type="submit" id="mc_info_rs_cr_calidad_capcbtnCalculaUpdate" class="Button" alt="Recalcular y Actualizar" value="Recalcular y Actualizar" name="{Button_Name}"><!-- END Button btnCalculaUpdate --></td> 
                   <td style="TEXT-ALIGN: right" colspan="3">
-                    <!-- BEGIN Button Button_Insert --><input type="submit" id="mc_info_rs_cr_calidad_capc_capcButton_Insert" class="Button" value="Agregar" alt="Agregar" name="{Button_Name}"><!-- END Button Button_Insert -->
-                    <!-- BEGIN Button Button_Update --><input type="submit" id="mc_info_rs_cr_calidad_capc_capcButton_Update" class="Button" value="Enviar" alt="Enviar" name="{Button_Name}"><!-- END Button Button_Update --><input type="hidden" id="mc_info_rs_cr_calidad_capc_capcUsuarioUltMod" value="{UsuarioUltMod}" name="{UsuarioUltMod_Name}"><label for="mc_info_rs_cr_calidad_capc_capcFechaUltMod" style="display: none;">Fcha Ult Mod</label><input type="hidden" id="mc_info_rs_cr_calidad_capc_capcFechaUltMod" value="{FechaUltMod}" name="{FechaUltMod_Name}"><input type="hidden" id="mc_info_rs_cr_calidad_capc_capchdId" value="{hdId}" name="{hdId_Name}"></td>
+                    <!-- BEGIN Button Button_Insert --><input type="submit" id="mc_info_rs_cr_calidad_capc_capcButton_Insert" class="Button" alt="Agregar" value="Agregar" name="{Button_Name}"><!-- END Button Button_Insert -->
+                    <!-- BEGIN Button Button_Update --><input type="submit" id="mc_info_rs_cr_calidad_capc_capcButton_Update" class="Button" alt="Enviar" value="Enviar" name="{Button_Name}"><!-- END Button Button_Update --><input type="hidden" id="mc_info_rs_cr_calidad_capc_capcUsuarioUltMod" value="{UsuarioUltMod}" name="{UsuarioUltMod_Name}"><label for="mc_info_rs_cr_calidad_capc_capcFechaUltMod" style="display: none;">Fcha Ult Mod</label><input type="hidden" id="mc_info_rs_cr_calidad_capc_capcFechaUltMod" value="{FechaUltMod}" name="{FechaUltMod_Name}"><input type="hidden" id="mc_info_rs_cr_calidad_capc_capchdId" value="{hdId}" name="{hdId_Name}"></td>
                 </tr>
               </table>
             </td>
